--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 86 points<br>
+Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 87 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -52,6 +52,7 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Miller (Level 3)</div>  <div class="info">Add only part of a file to the stage 47 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice News Reader (Level 1)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Apprentice News Reader (Level 2)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
+<li><div class="title">Apprentice News Reader (Level 3)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 3)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -101,42 +102,42 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   9472 rev-parse
-   9343 ls-files
-   9332 symbolic-ref
-    668 status
-    289 checkout
-    271 pull
-    137 log
-    121 branch
-    120 add
-    116 commit
-     84 diff
-     77 push
-     59 help
-     57 reset
-     41 tag
-     40 show
-     38 stash
-     34 fetch
+   9967 rev-parse
+   9835 ls-files
+   9789 symbolic-ref
+    711 status
+    304 checkout
+    281 pull
+    142 log
+    126 branch
+    123 add
+    118 commit
+     91 diff
+     84 push
+     65 help
+     59 reset
+     42 tag
+     41 show
+     39 stash
+     39 fetch
      32 merge
      20 achievements
      19 revert
+     14 submodule
      14 clean
-     12 submodule
+      8 whatchanged
       8 instaweb
       8 config
       8 clone
       7 init
-      6 whatchanged
       5 gc
       4 Wed
       4 --version
+      4 remote
       4 rebase
       4 cherry-pick
       3 Thu
       3 rm
-      3 remote
       3 mv
       3 ls-remote
       3 format-patch
