--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 87 points<br>
+Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 88 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -87,6 +87,7 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
+<li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Locksmith (Level -inf)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -102,27 +103,27 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   9967 rev-parse
-   9835 ls-files
-   9789 symbolic-ref
-    711 status
-    304 checkout
-    281 pull
-    142 log
-    126 branch
-    123 add
-    118 commit
-     91 diff
-     84 push
-     65 help
-     59 reset
+  10479 rev-parse
+  10349 ls-files
+  10303 symbolic-ref
+    762 status
+    311 checkout
+    300 pull
+    161 log
+    131 add
+    128 branch
+    127 commit
+    100 diff
+     90 push
+     75 help
+     65 reset
+     51 show
+     46 fetch
      42 tag
-     41 show
      39 stash
-     39 fetch
      32 merge
+     21 revert
      20 achievements
-     19 revert
      14 submodule
      14 clean
       8 whatchanged
