--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 88 points<br>
+Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 89 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -77,6 +77,7 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Blacksmith (Level 5)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
+<li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Collector (Level 5)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Dentist</div>  <div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
@@ -103,30 +104,30 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  10479 rev-parse
-  10349 ls-files
-  10303 symbolic-ref
-    762 status
+  10784 rev-parse
+  10648 ls-files
+  10602 symbolic-ref
+    773 status
     311 checkout
-    300 pull
-    161 log
-    131 add
+    310 pull
+    163 log
+    134 add
+    131 commit
     128 branch
-    127 commit
-    100 diff
-     90 push
-     75 help
+    102 diff
+     93 push
+     78 help
      65 reset
      51 show
-     46 fetch
+     48 fetch
      42 tag
      39 stash
      32 merge
      21 revert
      20 achievements
+     15 clean
      14 submodule
-     14 clean
-      8 whatchanged
+      9 whatchanged
       8 instaweb
       8 config
       8 clone
