--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 93 points<br>
+Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 94 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -93,6 +93,7 @@ Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Locksmith (Level -inf)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -108,41 +109,41 @@ Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  12425 rev-parse
-  12285 ls-files
-  12236 symbolic-ref
-    853 status
-    411 pull
-    397 checkout
-    217 log
-    152 branch
-    140 commit
-    137 add
-    126 push
-    116 diff
-    110 help
-     73 reset
-     72 merge
-     66 show
+  13097 rev-parse
+  12958 ls-files
+  12908 symbolic-ref
+    894 status
+    436 pull
+    431 checkout
+    252 log
+    159 branch
+    143 commit
+    139 add
+    135 push
+    121 help
+    119 diff
+     86 reset
+     84 merge
+     70 show
      53 fetch
-     46 tag
+     50 tag
      39 stash
+     23 clean
+     22 submodule
      21 revert
-     20 submodule
-     20 clean
      20 achievements
      11 config
+     10 clone
       9 whatchanged
       8 instaweb
       8 init
-      8 clone
       6 remote
+      6 cherry-pick
       5 gc
       4 Wed
       4 --version
       4 rebase
       4 for-each-ref
-      4 cherry-pick
       3 Thu
       3 rm
       3 mv
