--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 95 points<br>
+Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 96 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -79,6 +79,7 @@ Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Blacksmith (Level 5)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
+<li><div class="title">Cathedral Worker (Level 4)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -110,49 +111,49 @@ Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  13267 rev-parse
-  13130 ls-files
-  13076 symbolic-ref
-    899 status
-    447 pull
-    437 checkout
-    255 log
-    161 branch
-    147 commit
-    142 add
-    137 push
-    124 help
-    121 diff
-     88 reset
-     86 merge
-     70 show
+  14411 rev-parse
+  14271 ls-files
+  14214 symbolic-ref
+    951 status
+    519 pull
+    517 checkout
+    290 log
+    183 branch
+    176 push
+    161 commit
+    148 diff
+    145 add
+    143 help
+    123 merge
+    109 show
+     95 reset
      55 fetch
      50 tag
      39 stash
-     23 clean
-     22 submodule
-     21 revert
+     24 submodule
+     24 clean
+     22 revert
      20 achievements
      11 config
+     10 whatchanged
      10 clone
-      9 whatchanged
       8 instaweb
       8 init
       6 remote
+      6 rebase
+      6 format-patch
       6 cherry-pick
       5 gc
       4 Wed
       4 --version
-      4 rebase
       4 for-each-ref
+      4 apply
       3 Thu
       3 rm
       3 mv
       3 ls-remote
-      3 format-patch
       3 blame
       2 web--browse
-      2 apply
       1 grep
 </pre>
 <script type="text/javascript">
