--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 96 points<br>
+Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 97 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -78,6 +78,7 @@ Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Blacksmith (Level 5)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Blacksmith (Level 6)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cathedral Worker (Level 4)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
@@ -111,28 +112,28 @@ Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  14411 rev-parse
-  14271 ls-files
-  14214 symbolic-ref
-    951 status
-    519 pull
-    517 checkout
-    290 log
-    183 branch
-    176 push
-    161 commit
-    148 diff
-    145 add
-    143 help
-    123 merge
-    109 show
-     95 reset
-     55 fetch
-     50 tag
+  14853 rev-parse
+  14710 ls-files
+  14653 symbolic-ref
+    967 status
+    541 checkout
+    540 pull
+    311 log
+    193 branch
+    185 push
+    162 commit
+    154 help
+    149 diff
+    146 add
+    131 merge
+    113 show
+     98 reset
+     56 fetch
+     55 tag
      39 stash
-     24 submodule
+     29 submodule
+     24 revert
      24 clean
-     22 revert
      20 achievements
      11 config
      10 whatchanged
