--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 97 points<br>
+Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 98 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -81,6 +81,7 @@ Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Blacksmith (Level 6)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cathedral Worker (Level 4)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
+<li><div class="title">Cathedral Worker (Level 5)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -112,35 +113,35 @@ Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  14853 rev-parse
-  14710 ls-files
-  14653 symbolic-ref
-    967 status
-    541 checkout
-    540 pull
-    311 log
-    193 branch
-    185 push
-    162 commit
-    154 help
-    149 diff
-    146 add
-    131 merge
-    113 show
-     98 reset
-     56 fetch
-     55 tag
+  15225 rev-parse
+  15083 ls-files
+  15024 symbolic-ref
+    984 status
+    569 checkout
+    563 pull
+    330 log
+    207 branch
+    199 push
+    168 commit
+    162 help
+    150 diff
+    149 add
+    140 merge
+    116 show
+    102 reset
+     59 tag
+     57 fetch
+     40 submodule
      39 stash
-     29 submodule
-     24 revert
+     25 revert
      24 clean
      20 achievements
+     12 clone
+     11 whatchanged
      11 config
-     10 whatchanged
-     10 clone
+      9 init
       8 instaweb
-      8 init
-      6 remote
+      7 remote
       6 rebase
       6 format-patch
       6 cherry-pick
@@ -156,6 +157,7 @@ Git commands sorted by usage:
       3 blame
       2 web--browse
       1 grep
+      1 diff-index
 </pre>
 <script type="text/javascript">
 function showLocked() {
